syntax = "proto3";
package message;

message IpInfo {
    repeated string ip = 1;
}

message AdderInfo {
    repeated string adder = 1;
}

service Ip2AdderService{
    rpc GetAdderToIp(IpInfo) returns (AdderInfo);
}